--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,19 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+
+  <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBJ1mvsgJGfhDj4GeAi6hCW4HAtpJj4oDk",
+      authDomain: "nn-angular-8be2d.firebaseapp.com",
+      databaseURL: "https://nn-angular-8be2d.firebaseio.com",
+      storageBucket: "nn-angular-8be2d.appspot.com",
+      messagingSenderId: "412399212280"
+    };
+    firebase.initializeApp(config);
+  </script>
 </body>
 </html>
